// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelperErrorText Renders the UI snapshot correctly 1`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={false}
  id="ds-helperErrorText-basic"
>
  <div
    className="css-0"
    dangerouslySetInnerHTML={
      {
        "__html": "Text",
      }
    }
  />
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 2`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={true}
  id="ds-helperErrorText-invalid"
>
  <div
    className="css-0"
    dangerouslySetInnerHTML={
      {
        "__html": "Text",
      }
    }
  />
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 3`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={true}
  id="ds-helperErrorText-invalid"
>
  <div
    className="css-0"
    dangerouslySetInnerHTML={
      {
        "__html": "This helper text <b>contains HTML in the string</b>.",
      }
    }
  />
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 4`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={true}
  id="ds-helperErrorText-invalid"
>
  <div
    className="css-0"
  >
    This helper text 
    <b>
      contains HTML
    </b>
    .
  </div>
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 5`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-10g9ftz"
  data-isinvalid={false}
  id="ds-helperErrorText-chakra"
>
  <div
    className="css-0"
    dangerouslySetInnerHTML={
      {
        "__html": "Text",
      }
    }
  />
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 6`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={false}
  data-testid="props"
  id="ds-helperErrorText-props"
>
  <div
    className="css-0"
    dangerouslySetInnerHTML={
      {
        "__html": "Text",
      }
    }
  />
</div>
`;
